@@ -19,6 +19,7 @@ actor ImAlive : Boolean {}
 actor GauntletHit : Boolean {}
 actor DoomedGuy : Counter { Inventory.MaxAmount 70 }
 actor LevelIsTooBright : Boolean {}
+actor CannotIntoWallhack : Boolean {}
 
 #include "decorate/player.dec"
 #include "decorate/weapon.dec"
