@@ -29,6 +29,7 @@ actor PushPlayer : DoomPlayer
     Player.DisplayName "Network User"
     Player.StartItem "Push Gun"
     Player.StartItem "Force Gauntlet"
+    Player.StartItem "WallHackToggle", 1
     DamageFactor "PushDamage", 0.5
     DamageFactor "PushDamage2", 0.5
     DamageFactor "GrenadeDamage", 0.5
@@ -293,5 +294,37 @@ actor DeathSpark
         SLZD EEEEEEE 1 bright A_FadeOut(random(1,5)/100.0)
         SLZD FFFFFFF 1 bright A_FadeOut(random(1,5)/100.0)
         stop
+    }
+}
+
+actor WallHackVision : PowerLightAmp
+{
+    Powerup.Duration 0x7FFFFFFF
+    //Powerup.Color InverseMap
+}
+
+actor WallHackToggle : CustomInventory
+{
+    +INVBAR
+    +INVENTORY.UNDROPPABLE
+    +inventory.hubpower
+    Inventory.MaxAmount 1
+    States
+    {
+    Use:
+        TNT1 A 0 A_JumpIfInventory("CannotIntoWallhack",1,"UseFail")
+        TNT1 A 0 A_JumpIfInventory("WallHackVision",1,"TurnOff")
+        TNT1 A 0 A_PlaySoundEx("radar/on","item",0,0)
+        TNT1 A 0 A_SetBlend("White", 0.75, 12)
+        TNT1 A 0 ACS_ExecuteAlways(421,0,1)
+        fail
+    TurnOff:
+        TNT1 A 0 A_PlaySoundEx("radar/off","item",0,0)
+        TNT1 A 0 A_SetBlend("Black", 0.75, 12)
+        TNT1 A 0 ACS_ExecuteAlways(421,0,2)
+        fail
+    UseFail:
+        TNT1 A 1
+        fail
     }
 }
