@@ -16,6 +16,7 @@ actor "Push Gun" : Weapon
         RGUN A 1 A_Raise
         Loop
     Fire:
+        TNT1 A 0 A_JumpIfInventory("WallHackVision",1,"Nope")
         TNT1 A 0 A_PlayWeaponSound("push/fire")
         TNT1 A 0 A_JumpIfInventory("LevelIsTooBright",1,"BrightFire")
         TNT1 A 0 A_FireCustomMissile("LaserBullet",0,0)
@@ -27,6 +28,7 @@ actor "Push Gun" : Weapon
         RGUN IICA 1 A_WeaponReady(WRF_NOFIRE | WRF_NOSWITCH)
         Goto Ready
     AltFire:
+        TNT1 A 0 A_JumpIfInventory("WallHackVision",1,"Nope")
         RGUN A 1 A_WeaponReady(WRF_NOFIRE | WRF_NOSWITCH)
         TNT1 A 0 A_PlayWeaponSound("push/altfire")
         TNT1 A 0 A_JumpIfInventory("LevelIsTooBright",1,"BrightAltFire")
@@ -39,6 +41,10 @@ actor "Push Gun" : Weapon
         RGUN D 25 A_WeaponReady(WRF_NOFIRE | WRF_NOSWITCH)
         RGUN EEFFGA 2 A_WeaponReady(WRF_NOFIRE | WRF_NOSWITCH)
         Goto Ready
+    Nope:
+        RGUN A 1 A_WeaponReady(WRF_NOFIRE | WRF_NOSWITCH)
+        goto Ready
+
     Spawn:
         TNT1 A -1
         Stop
